--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
-*.html linguist-detectable=false
-*.css linguist-detectable=false
-*.js linguist-detectable=false
+
+*.html linguist-vendored=true
+*.css linguist-vendored=true
+*.js linguist-vendored=true
+
 *.py linguist-language=Python
