--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 
-*.html linguist-vendored=true
-*.css linguist-vendored=true
-*.js linguist-vendored=true
+*.html linguist-vendored=false
+*.css linguist-vendored=false
+*.js linguist-vendored=false
 
 *.py linguist-language=Python
